<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_up_empty_field">Field is empty</string>
    <string name="sign_up_incorrect_email">Email format is incorrect</string>
    <string name="sign_up_short_password">Password is too short</string>
    <string name="new_account_registration">New account registration</string>
    <string name="does_not_match_format">Doesn\'t match format</string>
    <string name="account_image_selection_error">Selection error</string>

    <string name="next">Next</string>
    <string name="register">Register</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="move_back_description">Move back</string>
</resources>